--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Sora', sans-serif;
-    background: #f7f9fc;
+    background: #fff; /* White background */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,17 +9,17 @@ body {
 }
 
 .container {
-    background: white;
     padding: 30px;
-    border-radius: 12px;
-    border: 1px solid #e0e0e0;
     width: 100%;
     max-width: 700px;
     height: 90vh; /* Added height */
     display: flex;
     flex-direction: column;
     overflow: hidden; /* Ensure no overflow is visible */
+    border: none; /* Removed border */
+    border-radius: 0; /* Removed border radius */
 }
+
 
 h1 {
     font-weight: 600;
@@ -60,23 +60,14 @@ button:not(:last-child) {
     margin-right: 15px; /* Add margin between buttons */
 }
 
-.right-buttons {
-    display: flex;
-    margin-left: auto; /* Pushes right button to the far right */
-}
-
 button {
-    font-family: 'Sora', sans-serif;
     padding: 5px; /* Decreased padding */
     border: none;
     border-radius: 50%; /* Circular shape */
     cursor: pointer;
-    font-size: 1.5em; /* Increased font size */
     margin: 0; /* Removed margin */
     transition: background 0.15s ease;
     background: #121212; /* Dark gray background */
-    color: #fff; /* White text color */
-    font-weight: 500; /* Medium weight */
     width: 50px; /* Decreased width */
     height: 50px; /* Decreased height */
     display: flex;
@@ -91,6 +82,19 @@ button:hover {
 button img {
     width: 40%; /* Adjust icon size */
     height: auto;
+}
+
+#reverseOrderButton {
+    background: #ffffff; /* Light gray background */
+}
+
+#reverseOrderButton img {
+    opacity: 0.5;
+    width: 50%;
+}
+
+#reverseOrderButton:hover {
+    background: #efefef; /* Slightly darker gray on hover */
 }
 
 #noteThread {
@@ -122,4 +126,3 @@ button img {
     color: #777;
     text-align: right;
 }
-
